(rule
 (targets binance_j.ml binance_j.mli)
 (deps binance.atd)
 (mode fallback)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets binance_t.ml binance_t.mli)
 (deps binance.atd)
 (mode fallback)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets report_j.ml report_j.mli)
 (deps report.atd)
 (mode fallback)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets report_t.ml report_t.mli)
 (deps report.atd)
 (mode fallback)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets report_bs.ml report_bs.mli)
 (deps report.atd)
 (mode fallback)
 (action
  (run atdgen -bs %{deps})))

(executable
 (name bbot)
 (preprocess
  (pps ppx_let))
 (modules bbot binance_t binance_j report_t report_j report_bs tools ta
   binance api report)
 (libraries core async async_ssl yojson uri textwrap cohttp-async
   atdgen-runtime atdgen-codec-runtime ppx_let))
